--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "advance-nodejs",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
+  "type": "commonjs",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
